--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nodecft",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "keywords": [
     "CFT with NodeJS",
     "NodeJS CTF",
@@ -12,18 +12,19 @@
   "license": "MIT",
   "description": "NodeCFT - Simple infrastructure as code software tool on NodeJS",
   "homepage": "https://github.com/priyanthag/NodeCFT#readme",
-  "url" : "https://github.com/priyanthag/NodeCFT/issues",
-  "email" : "pgdesigning@gmail.com",
+  "url": "https://github.com/priyanthag/NodeCFT/issues",
+  "email": "pgdesigning@gmail.com",
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/priyanthag/NodeCFT.git"
+    "type": "git",
+    "url": "https://github.com/priyanthag/NodeCFT.git"
   },
   "main": "bin/nodecft.js",
   "scripts": {
     "lint": "standard",
     "lint:fix": "standard --fix",
     "check": "npm run lint",
-    "build": "babel src --out-dir bin"
+    "build": "cross-env NODE_ENV=production babel src  --ignore **/*.test.js --out-dir bin",
+    "test": "cross-env NODE_ENV=test jest"
   },
   "pre-commit": [
     "lint:fix",
@@ -31,6 +32,7 @@
   ],
   "dependencies": {
     "child_process": "^1.0.2",
+    "dotenv": "^6.2.0",
     "util": "^0.11.1",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^3.8.0"
@@ -38,8 +40,8 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-eslint": "^10.0.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
+    "cross-env": "^5.2.0",
     "pre-commit": "^1.2.2",
     "standard": "^12.0.1"
   },
@@ -58,7 +60,6 @@
       "jest",
       "__rewire_reset_all__"
     ],
-    "parser": "babel-eslint",
     "plugins": [],
     "ignore": [
       "src/**/__tests__/**/*",
