--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "lint": "standard",
     "lint:fix": "standard --fix",
     "check": "npm run lint",
-    "build": "cross-env NODE_ENV=production babel src  --ignore **/*.test.js --out-dir bin",
+    "build": "cross-env NODE_ENV=production babel src  --ignore 'src/**/*.test.js','src/_fixtures' --out-dir bin",
     "test": "cross-env NODE_ENV=test jest"
   },
   "pre-commit": [
@@ -31,16 +31,17 @@
     "check"
   ],
   "dependencies": {
-    "child_process": "^1.0.2",
+    "aws-sdk": "^2.418.0",
     "dotenv": "^6.2.0",
-    "util": "^0.11.1",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^3.8.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.4.0",
+    "@babel/plugin-transform-destructuring": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
     "babel-eslint": "^10.0.1",
-    "babel-preset-env": "^1.7.0",
     "cross-env": "^5.2.0",
     "pre-commit": "^1.2.2",
     "standard": "^12.0.1"
